--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
 <!--controllers-->
 <script src="controllers/formCtrl.js"></script>
 <script src="controllers/quizCtrl.js"></script>
+<script src="controllers/resultCtrl.js"></script>
 
 <!--factory-->
 <script src="factory/data-service.js"></script>
