changes in result

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
 
 <!--factory-->
 <script src="factory/data-service.js"></script>
+<script src="factory/quizMetrics.js"></script>
 
 </body>
 </html>
