--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,17 @@
 <script src="routes.js"></script>
 
 <!--controllers-->
-<script src="controllers/formCtrl.js"></script>
+<script src="controllers/loginCtrl.js"></script>
 <script src="controllers/quizCtrl.js"></script>
 <script src="controllers/resultCtrl.js"></script>
+<script src="controllers/signupCtrl.js"></script>
 
 <!--factory-->
 <script src="factory/data-service.js"></script>
 <script src="factory/quizMetrics.js"></script>
+<script src="factory/mean.js"></script>
+<script src="factory/userAuth.js"></script>
+<script src="factory/adminAuth.js"></script>
 
 </body>
 </html>
