--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <!--[if gt IE 8]><!-->
 <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
+    <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Javascript Quiz</title>
